:bug: (app/blocks/page-header) Make 'page-header__link' always visible for desktop

--- a/app/blocks/page-header/page-header.scss
+++ b/app/blocks/page-header/page-header.scss
@@ -57,6 +57,10 @@
 
 		text-indent: -9999999px;
 
+		@media #{$desktop} {
+			display: block;
+		}
+
 		&--visible {
 			display: block;
 		}
